--- a/index.html
+++ b/index.html
@@ -25,5 +25,39 @@
             </a>
         </div>
     </header>
+    <!---->
+    <section class="tabs">
+        <div class="container">
+            <div id="tab1" class="tab-item tab-border">
+                <i class="fas fa-door-open fa-3x"></i>
+                <!-- Media queries to make it disapear on small screen -->
+                <p class="hide-sm">Cancel anytime</p>
+            </div>
+            <div id="tab2" class="tab-item">
+                <i class="fas fa-tablet-alt fa-3x"></i>
+                <!-- Media queries to make it disapear on small screen -->
+                <p class="hide-sm">Watch anywhere</p>
+            </div>
+            <div id="tab3" class="tab-item">
+                <i class="fas fa-tags fa-3x"></i>
+                <!-- Media queries to make it disapear on small screen -->
+                <p class="hide-sm">Pick your price</p>
+            </div>
+        </div>
+    </section>
+    <section class="tab-content">
+        <div class="container">
+            <!-- Tab Content 1 -->
+            <div id="tab-1-content" class="tab-content-item show">
+                <div class="tab-1-content-inner">
+                    <div>
+                        <p class="text-lg">If you decide Netflix isn't for you -  no problem. No commitment. Cancel online anytime.</p>
+                        <a href="#" class="btn btn-lg">Watch Free For 30 Days</a>
+                    </div>
+                    <img src="assets/img/tab-content-1.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
