--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
     <!---->
     <section class="tabs">
         <div class="container">
-            <div id="tab1" class="tab-item tab-border">
+            <div id="tab-1" class="tab-item tab-border">
                 <i class="fas fa-door-open fa-3x"></i>
                 <!-- Media queries to make it disapear on small screen -->
                 <p class="hide-sm">Cancel anytime</p>
             </div>
-            <div id="tab2" class="tab-item">
+            <div id="tab-2" class="tab-item">
                 <i class="fas fa-tablet-alt fa-3x"></i>
                 <!-- Media queries to make it disapear on small screen -->
                 <p class="hide-sm">Watch anywhere</p>
             </div>
-            <div id="tab3" class="tab-item">
+            <div id="tab-3" class="tab-item">
                 <i class="fas fa-tags fa-3x"></i>
                 <!-- Media queries to make it disapear on small screen -->
                 <p class="hide-sm">Pick your price</p>
@@ -181,6 +181,7 @@
                 <li><a href="#">Legal Notices</a></li>
             </ul>
         </div>
+        <script src="assets/js/main.js"></script>
     </footer>
 </body>
 </html>
